# palleto-dev

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml  railway.json
backend/app/: __init__.py  main.py
backend/app/api/: public.py
backend/app/api/v1/: cards.py  me.py  projects.py
backend/app/core/: auth.py  config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: card.py  project.py  project_chat.py  taste_profile.py  user.py
backend/app/services/: card_generator.py  card_refinements.py  link_preview.py  openai_card_generator.py  project_chat.py  project_context.py  projects.py  refinement_versions.py  shares.py  storage.py  taste_profiles.py  users.py
docs/: design_handoff_v1.md
mobile/: .env.example  App.tsx  GoogleService-Info.plist  app.json  eas.json  google-services.json  package-lock.json  package.json
mobile/plugins/: with-firebase-modular-headers.js
mobile/src/: theme.ts
mobile/src/screens/: AuthScreen.tsx  CaptureScreen.tsx  CardResultScreen.tsx  HomeScreen.tsx  LibraryScreen.tsx  LockedFeatureScreen.tsx  MainScreen.tsx  OnboardingScreen.tsx  PaywallScreen.tsx  ProcessingScreen.tsx  ProfileScreen.tsx  ProjectIntakeScreen.tsx  ProjectListScreen.tsx  QuickAccessScreen.tsx  RefineCardScreen.tsx  SplashScreen.tsx
mobile/src/services/: analytics.ts  api.ts  firebase.ts  onboarding.ts  projectContext.ts  revenueCat.ts
web/: .env.example  index.html  package-lock.json  package.json  vercel.json
web/api/: share-card-image.ts  share-image.ts  share.ts
web/src/: App.tsx  styles.css
(+15 files in other folders)
